<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff"
              android:padding="16dp">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:layout_marginTop="10dp"
                  android:gravity="right|center_horizontal"
                  android:orientation="vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:layout_marginBottom="20dp"
                  android:id="@+id/tvRegisterOrUpdate"
                  style="?android:attr/textAppearanceLarge"
                  android:textColor="@color/registerText"
                  android:textAlignment="center"/>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center">
            <ImageView android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:id="@+id/imgAvatarRegister"
                       android:src="@drawable/ic_person_black_24dp"/>

        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/phone"
                      android:inputType="number"
                      android:id="@+id/edtPhoneNumberRegiser"
                      android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/username"
                      android:id="@+id/edtUserNameRegister"
                      android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      android:id="@+id/edtPasswordRegister"
                      android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tlConfirmPassword"
                android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/confirmPassword"
                      android:inputType="textPassword"
                      android:id="@+id/edtConfirmPassword"
                      android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                android:translationZ="10dp"
                android:theme="@style/PrimaryButton"
                android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>